argocd/apps/pathfinder-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pathfinder
  namespace: pathfinder
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway-public
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - pathfinder.yourdevops.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: pathfinder
          port: 8000
          weight: 1
